--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "0.8.1"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
